// Enum Definitions //
//////////////////////

enum contract_status {
  uploaded
  parsed
  analyzed
  error
}

enum job_status {
  queued
  in_progress
  completed
  failed
}

enum section_type {
  toc
  preamble
  body
  signature
  attachment
}

enum rule_severity {
  critical
  warning
  info
}

enum issue_status {
  open
  resolved
}

enum issue_resolution {
  ignore
  manual_edit
  suggested_edit
}

enum chat_message_status {
  pending
  in_progress
  completed
  failed
}

enum chat_message_role {
  user
  assistant
}

// User Configuration Entities //
/////////////////////////////////

// standard set of clauses to map/extract from input contracts
Table standard_clauses {
  id uuid [pk]
  name string
  description string
  standard_text string
  created_at timestamp
  updated_at timestamp
}

// standard clause-specific policy rules
table standard_clause_rules {
  id uuid [pk]
  standard_clause_id uuid [ref: > standard_clauses.id]
  severity rule_severity
  title string
  text string
  created_at timestamp
  updated_at timestamp
}

// User-Uploaded Contract Entities //
/////////////////////////////////////

// user-uploaded contracts
Table contracts {
  id uuid [pk]
  status contract_status
  errors json
  filename string
  filetype enum
  contents bytea
  markdown string
  meta json
  created_at timestamp
  updated_at timestamp
}

// parsed individual sections from input contracts
Table contract_sections {
  id uuid [pk]
  contract_id uuid [ref: > contracts.id]
  type enum
  level integer
  number string
  name string
  markdown string
  embedding vector
  beg_page int
  end_page int
  created_at timestamp
  updated_at timestamp
}

// System-Generated Mapped Clauses and Identified Issues //
/////////////////////////////////////////////////////////

// contract-specific standardized clause text
Table contract_clauses {
  id uuid [pk]
  standard_clause_id uuid [ref: > standard_clauses.id]
  contract_id uuid [ref: > contracts.id]
  contract_sections uuid[] [ref: > contract_sections.id]
  raw_markdown string
  summarized_markdown string
  created_at timestamp
  updated_at timestamp
}

// mapping of contract-specific clauses to relevant raw sections
Table contract_clause_sections {
  id uuid [pk]
  contract_clause_id uuid [ref: > contract_clauses.id]
  contract_section_id uuid [ref: > contract_sections.id]
}

// identified contract-clause issues wrt clause-specific policy rules
Table contract_issues {
  id uuid [pk]
  standard_clause_id uuid [ref: > standard_clauses.id]
  standard_clause_rule_id uuid [ref: > standard_clause_rules.id]
  contract_id uuid [ref: > contracts.id]
  description string
  citations json
  status issue_status
  resolution issue_resolution
  original_text string
  suggested_text string
  resolved_text string
  created_at timestamp
  updated_at timestamp
}

// Chat-Based Contract Q&A Entities //
//////////////////////////////////////

// contract-specific chat threads
Table chat_thread {
  id uuid [pk]
  contract_id uuid [ref: > contracts.id]
  name string
  archived boolean
  created_at timestamp
  updated_at timestamp
}

// contract-specific chat thread messages
// NOTE: citations will be to the relevant contract section
Table chat_message {
  id uuid [pk]
  chat_thread_id uuid [ref: > chat_thread.id]
  parent_chat_message_id uuid [ref: - chat_message.id]
  status enum
  role enum
  content string
  citations json
  created_at timestamp
  updated_at timestamp
}

// Background Jobs Entities //
//////////////////////////////

Table contract_ingestion_jobs {
  id uuid [pk]
  contract_id uuid [ref: > contracts.id]
  status job_status
  errors json
  created_at timestamp
  updated_at timestamp
}

Table contract_analysis_jobs {
  id uuid [pk]
  contract_id uuid [ref: > contracts.id]
  status job_status
  errors json
  created_at timestamp
  updated_at timestamp
}
